Javadoc fixes and findbugs code cleanups.